--- a/src/app/home/sale/sale.component.html
+++ b/src/app/home/sale/sale.component.html
@@ -807,22 +807,22 @@
         <div class="row">
           <div id="customer-info" class="col-6 customer-info">
             <h3><span class="pharmacy">{{ orderDetails.pharmacy }}</span></h3>
-            <div style="color: #728088;">{{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</div>
-            <div style="color: #728088;">For Order: {{ orderDetails.branch_mobile }}</div>
-            <div *ngIf="orderDetails.branch_contact_person_mobile" style="color: #728088;">For Service: {{ orderDetails.branch_contact_person_mobile }}</div>
+            <div [ngStyle]="{ color: colorCode }">{{ orderDetails.branch_name }}, {{ orderDetails.branch_area }}, {{ orderDetails.branch_city }}</div>
+            <div [ngStyle]="{ color: colorCode }">For Order: {{ orderDetails.branch_mobile }}</div>
+            <div *ngIf="orderDetails.branch_contact_person_mobile" [ngStyle]="{ color: colorCode }">For Service: {{ orderDetails.branch_contact_person_mobile }}</div>
           </div>
           <div class="col-6 float-right">
             <div>
-              <h3><strong style="color: #728088;">INVOICE</strong></h3>
+              <h3><strong [ngStyle]="{ color: colorCode }">INVOICE</strong></h3>
               <br>
-              <span style="background-color: #728088;color: #ffff;padding: 1%;"># {{ orderDetails.invoice }} | DATE: {{ orderDetails.created_at }}</span></div>
+              <span [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="padding: 1%;"># {{ orderDetails.invoice }} | DATE: {{ orderDetails.created_at }}</span></div>
           </div>
         </div>
         <br>
 
         <div style="display: flex;">
           <div>
-            <div style="background-color: #728088;padding: 1%;color: #ffff"><strong>Bill:</strong></div>
+            <div [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="padding: 1%;"><strong>Bill:</strong></div>
             <div style="margin-top: 6px;"><strong>{{ orderDetails.customer_name }}</strong></div>
             <div>{{ orderDetails.customer_mobile }}</div>
           </div>
@@ -838,14 +838,14 @@
         <table class="preview">
           <thead>
             <tr>
-              <th style="background-color: #728088;color: #ffff;width:5%" class="unit">#</th>
-              <th style="background-color: #728088;color: #ffff;width:30%;text-align: left">Product</th>
-              <th style="background-color: #728088;color: #ffff;width:10%">Qty</th>
-              <th *ngIf="freeQtyShow" style="background-color: #728088;color: #ffff;width:10%">Free(Qty)</th>
-              <th *ngIf="tpShow" style="background-color: #728088;color: #ffff;width:10%;text-align: right">CPU(&#x9f3;)</th>
-              <th style="background-color: #728088;color: #ffff;width:10%;text-align: right">Price(&#x9f3;)</th>
-              <th *ngIf="profitShow" style="background-color: #728088;color: #ffff;width:10%;text-align: right">Profit(&#x9f3;)</th>
-              <th style="background-color: #728088;color: #ffff;width:15%;text-align: right;padding-right: 2%">Total(&#x9f3;)</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:5%" class="unit">#</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:30%;text-align: left">Product</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%">Qty</th>
+              <th *ngIf="freeQtyShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%">Free(Qty)</th>
+              <th *ngIf="tpShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">CPU(&#x9f3;)</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">Price(&#x9f3;)</th>
+              <th *ngIf="profitShow" [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:10%;text-align: right">Profit(&#x9f3;)</th>
+              <th [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }" style="width:15%;text-align: right;padding-right: 2%">Total(&#x9f3;)</th>
             </tr>
           </thead>
           <tbody *ngIf="
@@ -905,7 +905,7 @@
                 &#x9f3;&nbsp;{{ orderDetails.discount | number: "1.2-2" }}
               </td>
             </tr>
-            <tr style="background-color: #728088;color: #ffff">
+            <tr [ngStyle]="{ backgroundColor: colorCode, color: colorCodeText }">
               <td colspan="2" class="thanku">
                 THANK YOU FOR YOUR BUSINESS
               </td>
